// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JIT AOT generate > co-emits Runtime Classes for AOT JSON construction pipelines > AOT JSON Runtime Class construction 1`] = `
"// Generated by jit — do not edit.
class JITValidationError extends Error {
  constructor(issues) {
    const first = issues[0];
    super(first ? (first.path ? first.path + ": " : "") + first.message : "validation failed");
    this.name = "JITValidationError";
    this.code = "VALIDATION_FAILED";
    this.issues = issues;
  }
}
const User_validator = /*#__PURE__*/ (() => {
  function safeParse(value) {
    const issues = [];
    let v1 = value;
    if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
      issues[issues.length] = { path: "", code: "expected_object", expected: "object", message: "expected object", received: typeof v1 };
    } else {
      let v3 = v1.id;
      if (typeof v3 !== "string") {
        issues[issues.length] = { path: "id", code: "expected_string", expected: "string", message: "expected string", received: typeof v3 };
      } else {
      }
      let v5 = v1.name;
      if (typeof v5 !== "string") {
        issues[issues.length] = { path: "name", code: "expected_string", expected: "string", message: "expected string", received: typeof v5 };
      } else {
      }
    }
    if (issues.length !== 0) {
      return { success: false, issues: issues };
    }
    return { success: true, data: v1 };
  }
  return { safeParse: safeParse };
})();
const User_validator_1 = /*#__PURE__*/ (() => {
  function safeParse(value) {
    const issues = [];
    let v1 = value;
    if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
      issues[issues.length] = { path: "", code: "expected_object", expected: "object", message: "expected object", received: typeof v1 };
    } else {
      let v3 = v1.id;
      if (typeof v3 !== "string") {
        issues[issues.length] = { path: "id", code: "expected_string", expected: "string", message: "expected string", received: typeof v3 };
      } else {
      }
      let v5 = v1.name;
      if (typeof v5 !== "string") {
        issues[issues.length] = { path: "name", code: "expected_string", expected: "string", message: "expected string", received: typeof v5 };
      } else {
      }
    }
    if (issues.length !== 0) {
      return { success: false, issues: issues };
    }
    return { success: true, data: v1 };
  }
  return { safeParse: safeParse };
})();
const User = /*#__PURE__*/ (() => {
  const __construct = Symbol();
  return class User {
    constructor(input, token, validated) { const state = token === true || validated === true ? input : (() => { const result = User_validator.safeParse(input); if (!result.success) throw new JITValidationError(result.issues); return result.data; })(); this["id"] = state["id"]; this["name"] = state["name"]; }
  };
})();
const parseUser_validator = /*#__PURE__*/ (() => {
  function safeParse(value) {
    const issues = [];
    let v1 = value;
    let o2 = v1;
    if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
      issues[issues.length] = { path: "", code: "expected_object", expected: "object", message: "expected object", received: typeof v1 };
    } else {
      let v3 = v1.id;
      if (typeof v3 !== "string") {
        issues[issues.length] = { path: "id", code: "expected_string", expected: "string", message: "expected string", received: typeof v3 };
      } else {
      }
      let v5 = v1.name;
      if (typeof v5 !== "string") {
        issues[issues.length] = { path: "name", code: "expected_string", expected: "string", message: "expected string", received: typeof v5 };
      } else {
      }
    }
    o2 = v1;
    if (issues.length !== 0) {
      return { success: false, issues: issues };
    }
    return { success: true, data: o2 };
  }
  return { safeParse: safeParse };
})();
const parseUser = (json) => { const r = parseUser_validator.safeParse(JSON.parse(json)); if (r.success) return new User(r.data, true); throw new JITValidationError(r.issues); };
export { User, parseUser };
"
`;

exports[`JIT AOT generate > should emit one self-contained and directly typed TypeScript module > direct TypeScript AOT 1`] = `
"// Generated by jit — do not edit.
// @ts-nocheck -- generated internals are typed at the public export boundary.
export type User = { id: number; name: string };

class JITValidationError extends Error {
  constructor(issues) {
    const first = issues[0];
    super(first ? (first.path ? first.path + ": " : "") + first.message : "validation failed");
    this.name = "JITValidationError";
    this.code = "VALIDATION_FAILED";
    this.issues = issues;
  }
}
const User_is_validator = /*#__PURE__*/ (() => {
  function is(value) {
    let v1 = value;
    if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
      return false;
    }
    let v3 = v1.id;
    if (typeof v3 !== "number") {
      return false;
    }
    if ((v3 | 0) !== v3) {
      return false;
    }
    let v5 = v1.name;
    if (typeof v5 !== "string") {
      return false;
    }
    return true;
  }
  return { is: is };
})();
const User_is = /*#__PURE__*/ ((v) => v.is)(User_is_validator);
const User_parse_validator = /*#__PURE__*/ (() => {
  function is(value) {
    let v1 = value;
    if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
      return false;
    }
    let v3 = v1.id;
    if (typeof v3 !== "number") {
      return false;
    }
    if ((v3 | 0) !== v3) {
      return false;
    }
    let v5 = v1.name;
    if (typeof v5 !== "string") {
      return false;
    }
    return true;
  }
  function safeParse(value) {
    const issues = [];
    let v1 = value;
    if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
      issues[issues.length] = { path: "", code: "expected_object", expected: "object", message: "expected object", received: typeof v1 };
    } else {
      let v3 = v1.id;
      if (typeof v3 !== "number") {
        issues[issues.length] = { path: "id", code: "expected_number", expected: "number", message: "expected number", received: typeof v3 };
      } else {
        if ((v3 | 0) !== v3) {
          issues[issues.length] = { path: "id", code: "not_int32", expected: "int32", message: "expected a 32-bit signed integer" };
        }
      }
      let v5 = v1.name;
      if (typeof v5 !== "string") {
        issues[issues.length] = { path: "name", code: "expected_string", expected: "string", message: "expected string", received: typeof v5 };
      } else {
      }
    }
    if (issues.length !== 0) {
      return { success: false, issues: issues };
    }
    return { success: true, data: v1 };
  }
  return { is: is, safeParse: safeParse };
})();
const User_parse = (value) => { if (User_parse_validator.is(value)) return value; const r = User_parse_validator.safeParse(value); if (r.success) return r.data; throw new JITValidationError(r.issues); };
const User: {
  readonly is: (value: unknown) => value is User;
  readonly parse: (value: unknown) => User;
} = /*#__PURE__*/ Object.freeze({
  is: User_is,
  parse: User_parse,
});

export { User };
"
`;

exports[`JIT AOT generate > should lower aggregate infrastructure into an extendable import-free base > AOT aggregate mutation and event buffer 1`] = `
"// Generated by jit — do not edit.
class JITValidationError extends Error {
  constructor(issues) {
    const first = issues[0];
    super(first ? (first.path ? first.path + ": " : "") + first.message : "validation failed");
    this.name = "JITValidationError";
    this.code = "VALIDATION_FAILED";
    this.issues = issues;
  }
}
const OrderBase_validator = /*#__PURE__*/ (() => {
  const __v0 = "o_1";
  function safeParse(value) {
    const issues = [];
    let v1 = value;
    let o2 = v1;
    let b3;
    if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
      issues[issues.length] = { path: "", code: "expected_object", expected: "object", message: "expected object", received: typeof v1 };
    } else {
      let v4 = v1.id;
      let o5 = v4;
      if (v4 === undefined) {
        o5 = __v0;
      } else {
        if (typeof v4 !== "string") {
          issues[issues.length] = { path: "id", code: "expected_string", expected: "string", message: "expected string", received: typeof v4 };
        } else {
        }
        o5 = v4;
      }
      let v6 = v1.status;
      if (v6 !== "draft" && v6 !== "confirmed") {
        issues[issues.length] = { path: "status", code: "invalid_enum", expected: "draft | confirmed", message: "expected one of the enum values" };
      }
      let v8 = v1.shipping;
      if (v8 === null || typeof v8 !== "object" || Array.isArray(v8)) {
        issues[issues.length] = { path: "shipping", code: "expected_object", expected: "object", message: "expected object", received: typeof v8 };
      } else {
        let v10 = v8.city;
        if (typeof v10 !== "string") {
          issues[issues.length] = { path: "shipping.city", code: "expected_string", expected: "string", message: "expected string", received: typeof v10 };
        } else {
        }
        let v12 = v8.country;
        if (typeof v12 !== "string") {
          issues[issues.length] = { path: "shipping.country", code: "expected_string", expected: "string", message: "expected string", received: typeof v12 };
        } else {
        }
      }
      b3 = { "id": o5, "status": v6, "shipping": v8 };
    }
    if (b3 === undefined) { b3 = v1; }
    o2 = b3;
    if (issues.length !== 0) {
      return { success: false, issues: issues };
    }
    return { success: true, data: o2 };
  }
  return { safeParse: safeParse };
})();
const OrderBase_validator_1 = /*#__PURE__*/ (() => {
  function safeParse(value) {
    const issues = [];
    let v1 = value;
    let o2 = v1;
    let b3;
    if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
      issues[issues.length] = { path: "", code: "expected_object", expected: "object", message: "expected object", received: typeof v1 };
    } else {
      let v4 = v1.id;
      let o5 = v4;
      if (typeof v4 !== "string") {
        issues[issues.length] = { path: "id", code: "expected_string", expected: "string", message: "expected string", received: typeof v4 };
      } else {
      }
      o5 = v4;
      let v6 = v1.status;
      if (v6 !== "draft" && v6 !== "confirmed") {
        issues[issues.length] = { path: "status", code: "invalid_enum", expected: "draft | confirmed", message: "expected one of the enum values" };
      }
      let v8 = v1.shipping;
      if (v8 === null || typeof v8 !== "object" || Array.isArray(v8)) {
        issues[issues.length] = { path: "shipping", code: "expected_object", expected: "object", message: "expected object", received: typeof v8 };
      } else {
        let v10 = v8.city;
        if (typeof v10 !== "string") {
          issues[issues.length] = { path: "shipping.city", code: "expected_string", expected: "string", message: "expected string", received: typeof v10 };
        } else {
        }
        let v12 = v8.country;
        if (typeof v12 !== "string") {
          issues[issues.length] = { path: "shipping.country", code: "expected_string", expected: "string", message: "expected string", received: typeof v12 };
        } else {
        }
      }
      b3 = { "id": o5, "status": v6, "shipping": v8 };
    }
    if (b3 === undefined) { b3 = v1; }
    o2 = b3;
    if (issues.length !== 0) {
      return { success: false, issues: issues };
    }
    return { success: true, data: o2 };
  }
  return { safeParse: safeParse };
})();
const OrderBase = /*#__PURE__*/ (() => {
  const __construct = Symbol();
  const OrderBase_update_1 = (function update(value, patch) {
  let out = value;
  if (patch !== undefined) {
    let next_city = value.city;
    if (patch.city !== undefined && !Object.is(value.city, patch.city)) {
      next_city = patch.city;
    }
    let next_country = value.country;
    if (patch.country !== undefined && !Object.is(value.country, patch.country)) {
      next_country = patch.country;
    }
    if (next_city !== value.city || next_country !== value.country) {
      out = { "city": next_city, "country": next_country };
    }
  }
  return out;
});
  return class OrderBase {
    constructor(input, token, validated) { if (token !== __construct && token !== true) throw new Error("This Runtime Type uses factory construction; call its create() or hydrate() factory"); const state = token === true || validated === true ? input : (() => { const result = OrderBase_validator.safeParse(input); if (!result.success) throw new JITValidationError(result.issues); return result.data; })(); this["id"] = state["id"]; this["status"] = state["status"]; this["shipping"] = state["shipping"]; Object.defineProperty(this, "__jitEvents", { value: [], writable: true }); }
    static create(input) { if (this === OrderBase) throw new Error("Cannot create an instance of an abstract JIT class"); return new this(input, __construct); }
    static hydrate(state) { if (this === OrderBase) throw new Error("Cannot create an instance of an abstract JIT class"); const result = OrderBase_validator_1.safeParse(state); if (!result.success) throw new JITValidationError(result.issues); return new this(result.data, __construct, true); }
    identity() { return this["id"]; }
    sameIdentity(other) { return typeof other === "object" && other !== null && Object.is(this["id"], other["id"]); }
    update(patch) { let changed = false;
if (patch.status !== undefined) {
  const next = patch.status;
  if (next !== this.status) { this.status = next; changed = true; }
}
if (patch.shipping !== undefined) {
  const next = OrderBase_update_1(this.shipping, patch.shipping);
  if (next !== this.shipping) { this.shipping = next; changed = true; }
}
if (!changed) return; }
    raise(event) { this.__jitEvents.push(event); }
    peekEvents() { return this.__jitEvents.slice(); }
    pullEvents() { const events = this.__jitEvents; this.__jitEvents = []; return events; }
    async commit(publisher) { const pending = this.__jitEvents; for (let index = 0; index < pending.length; index++) await publisher.publish(pending[index]); this.__jitEvents.splice(0, pending.length); }
  };
})();
export { OrderBase };
"
`;
